--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-config-xo-react": "^0.16.0",
     "eslint-plugin-react": "^7.7.0",
     "style-loader": "^0.20.3",
+    "supertest": "^3.0.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
     "xo": "^0.20.3"
