--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "chart.js": "^2.7.2",
     "css-loader": "^0.28.11",
     "eslint-config-xo-react": "^0.16.0",
     "eslint-plugin-react": "^7.7.0",
+    "prop-types": "^15.6.1",
+    "react-chartjs-2": "^2.7.2",
     "style-loader": "^0.20.3",
     "supertest": "^3.0.0",
     "webpack": "^4.5.0",
