--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-react": "^6.24.1",
     "chart.js": "^2.7.2",
     "css-loader": "^0.28.11",
+    "dayjs": "^1.5.24",
     "eslint-config-xo-react": "^0.16.0",
     "eslint-plugin-react": "^7.7.0",
     "prop-types": "^15.6.1",
