--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "author": "tassu <hello@tassu.me>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.46",
+    "@babel/preset-env": "^7.0.0-beta.46",
+    "@babel/preset-react": "^7.0.0-beta.46",
     "ava": "^1.0.0-beta.3",
     "axios": "^0.18.0",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
     "chart.js": "^2.7.2",
     "css-loader": "^0.28.11",
     "dayjs": "^1.5.24",
@@ -25,6 +25,7 @@
     "eslint-plugin-react": "^7.7.0",
     "prop-types": "^15.6.1",
     "react-chartjs-2": "^2.7.2",
+    "react-test-renderer": "^16.3.2",
     "style-loader": "^0.20.3",
     "supertest": "^3.0.0",
     "webpack": "^4.5.0",
@@ -32,8 +33,9 @@
     "xo": "^0.20.3"
   },
   "dependencies": {
-    "babel-loader": "^7.1.4",
-    "babel-polyfill": "^6.26.0",
+    "@babel/core": "^7.0.0-beta.46",
+    "@babel/polyfill": "^7.0.0-beta.46",
+    "@babel/register": "^7.0.0-beta.46",
     "body-parser": "^1.18.2",
     "concurrently": "^3.5.1",
     "kcors": "^2.2.1",
@@ -51,10 +53,10 @@
   "ava": {
     "files": [
       "test/**/*.js"
-    ],
-    "require": [
-      "babel-register"
-    ]
+  	],
+	"require": [
+	  "@babel/register"
+	]
   },
   "xo": {
     "extends": "xo-react",
